--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,11 @@
 # 1. 基本設定
 # -----------------
 cmake_minimum_required(VERSION 3.16)
-project(SuperDimensionalTennisClient C)
+project(SuperDimensionalTennisClient CXX)
 
-# C99規格を必須にする
-set(CMAKE_C_STANDARD 99)
-set(CMAKE_C_STANDARD_REQUIRED ON)
-
+# C++17規格を必須にする
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 # 2. ライブラリの検索
 # -----------------
@@ -14,16 +13,13 @@ set(CMAKE_C_STANDARD_REQUIRED ON)
 # (成功すると SDL2_INCLUDE_DIRS と SDL2_LIBRARIES 変数が設定される)
 find_package(SDL2 REQUIRED)
 
-
 # 3. ソースファイルの定義
 # -----------------
-file(GLOB_RECURSE SOURCES "src/*.c")
-
+file(GLOB_RECURSE SOURCES "src/*.cpp" "src/*.c")
 
 # 4. 実行ファイルの定義
 # -----------------
 add_executable(client ${SOURCES})
-
 
 # 5. インクルードパスの指定 (★修正箇所)
 # -----------------
@@ -32,12 +28,12 @@ target_include_directories(client PRIVATE
     ${SDL2_INCLUDE_DIRS} # SDL2のヘッダファイルへのパスを追加
 )
 
-
 # 6. ライブラリのリンク (★修正箇所)
 # -----------------
 target_link_libraries(client PRIVATE
+
     # --- システムライブラリ ---
-    ${SDL2_LIBRARIES}     # SDL2::SDL2 の代わりにこの変数を使う
+    ${SDL2_LIBRARIES} # SDL2::SDL2 の代わりにこの変数を使う
 )
 
 # (オプション) アセットフォルダを実行ファイルと同じ場所にコピー
